# 42sh

./: .gitignore  Makefile.am  configure.ac
src/: 42sh.c  Makefile.am
src/.deps/: 42sh-42sh.Po
src/IO_backend/: Makefile.am  io_backend.c  io_backend.h
src/IO_backend/.deps/: libio_a-io_backend.Po
src/ast/: ast.c  ast.h
src/ast/.deps/: libast_a-ast.Po  libast_a-ast.Tpo
src/builtin/: Makefile.am  builtin.c  builtin.h  builtin_echo.c  builtin_export.c  tf.c
src/builtin/.deps/: libbuilt_a-builtin.Po
src/exec/: Makefile.am  dlist.c  dlist.h  exec.h  exec1.c  exec1.h  exec2.c  hash_map.c  hash_map.h  hash_map_fun.c  hash_map_fun.h  pipeline.c  pipeline.h  redirection.c  redirection.h
src/expansion/: Makefile.am  expansion.c  expansion.h
src/io_backend/: io_backend.c  io_backend.h
src/lexer/: lexer.c  lexer.h
src/parser/: Makefile.am  parser.c  parser.h
src/parser/.deps/: libparser_a-parser.Po  libparser_a-parser.Tpo
src/tests/: Makefile.am  test_builtin.c
test/: Makefile.am
tests/: 4  Makefile  Makefile.am  Makefile.in  a  a_n  add_redir_cmd  all_quotes1  bad_unterminated_quote  bad_weak2  bad_weak3  badexec1  badexec2  badexec3  badexec4  badexec5  badexec6  badl  badtriplepipe  big_arg  bizare_for.sh  complexe_for.sh  complexe_for2.sh  complexe_for3.sh  complexe_subshell.sh  dif_false.sh  double_echo.sh  double_in_single_echo.sh  double_until.sh  double_while.sh  doublefor  doublequote.sh  doublequote2.sh  echo_e_backslash1  echo_many_e_E2  echo_mix_options1  echo_mix_options2  errfor  errif  erruntil  (+86 more)
tests/.deps/: criterion-test_builtin.Po
